<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingley"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ddd"
    android:gravity="bottom|center"
    android:orientation="vertical"
    tools:context=".Setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"></LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnloop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="btnlooop"
                    android:src="@drawable/loopba"
                    android:text="لوپ" />

                <TextView
                    android:id="@+id/txtloop"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"

                    android:onClick="btnlooop"
                    android:text="@string/looptanz"
                    android:textColor="#FF9800"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btntunel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="btntunnel"

                    android:src="@drawable/sp"
                    android:text="تونل" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"

                    android:onClick="btntunnel"
                    android:text="@string/toonelsetting"
                    android:textColor="#FF9800"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btndns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="btndns"
                    android:src="@drawable/dns"

                    android:text="دس ان اس"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:id="@+id/txtdnsss"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:onClick="btndns"
                    android:text="@string/dns"

                    android:textColor="#FF9800"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnlang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"

                    android:onClick="lang"
                    android:src="@drawable/langgg"
                    android:text=""
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:id="@+id/txtlang"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:onClick="lang"

                    android:text="@string/zaban"
                    android:textColor="#FF9800"
                    android:textSize="16sp"
                    tools:ignore="UsingOnClickInXml" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent"

                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btntheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="theme"
                    android:src="@drawable/themeee"
                    android:text="تم" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:onClick="theme"

                    android:text="@string/changetheme"
                    android:textColor="#FF9800"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="update"

                    android:src="@drawable/down"
                    android:text="" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:onClick="update"

                    android:text="@string/update"
                    android:textColor="#FF9800"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnipv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:onClick="btnipv"
                    android:src="@drawable/ipv55"
                    android:text="لوپ" />

                <TextView
                    android:id="@+id/txtipv"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"

                    android:onClick="btnipv"
                    android:text="فعال کردن ipv6"
                    android:textColor="#FF9800"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>