<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal|center_vertical"
    android:layout_marginHorizontal="10dp"
    android:id="@+id/mainlay"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/dl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.gesture.GestureOverlayView
            android:id="@+id/gestureOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeOffset="1000"
            android:gestureColor="@color/transparent"
            android:uncertainGestureColor="@color/transparent"


            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical"
            android:weightSum="3">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center|top"
                android:orientation="vertical"
                android:weightSum="6">


                <TextView
                    android:id="@+id/button3"


                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/ddd"
                    android:gravity="center"

                    android:text="@string/testserver"
                    android:textColor="@color/yello"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnlogo"
                    android:layout_width="match_parent"
                    android:text="اینترنت برای همه یا هیچکس"

                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/ddd"
                    android:gravity="center"
                    android:textColor="@color/yello"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_connection2"
                    android:layout_width="match_parent"

                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/ddd"
                    android:gravity="center"
                    android:onClick="config"
                    android:text="@string/serverfree"
                    android:textColor="@color/yello"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="0.5"
                    android:foregroundGravity="top"


                    android:padding="5dp"
                    android:src="@drawable/df"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/connected_server_delay"
                        android:layout_width="110dp"
                        android:layout_height="34dp"

                        android:layout_gravity="center|start|center_horizontal|center_vertical"
                        android:layout_marginVertical="8dp"
                        android:gravity="center"
                        android:text="@string/pasokh"
                        android:textColor="@color/yello"
                        android:textSize="8sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/connection_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"

                        android:layout_marginVertical="8dp"
                        android:gravity="center"
                        android:text="00:00:00"
                        android:textColor="@color/yello"
                        android:textSize="8sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/connection_traffic"
                        android:layout_width="135dp"
                        android:layout_height="34dp"

                        android:layout_gravity="center|center_horizontal|end"
                        android:layout_marginVertical="8dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/masrafdo"
                        android:textColor="@color/yello"
                        android:textSize="8sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="0.5"

                    android:foregroundGravity="top"
                    app:cardBackgroundColor="@color/yello"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="16dp"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="5sp"
                        android:gravity="center|top"


                        android:text="TextView"
                        android:textColor="@color/yello"
                        android:textSize="8sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:onClick="mesterbeev"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/down" />

                    <TextView
                        android:id="@+id/connection_speed"
                        android:layout_width="200dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginVertical="8dp"
                        android:gravity="center|top"

                        android:text="0 B/s   |   0 B/s"
                        android:textColor="@color/yello"
                        android:textSize="10dp"
                        android:textStyle="bold"
                        tools:ignore="TextSizeCheck" />

                    <ImageView
                        android:id="@+id/connected_country"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/up" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="151dp"
                    android:layout_height="30dp"
                    android:layout_above="@+id/vpnBtn"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="23dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="22dp"
                    android:layout_weight="0.5"
                    app:srcCompat="@drawable/yel" />

                <Button
                    android:id="@+id/btnvpn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circle_button"
                    android:gravity="center"
                    android:text="OFF"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>


            <!--    <Button-->
            <!--        android:id="@+id/btn_connection"-->
            <!--        android:layout_width="wrap_content"-->

            <!--        android:layout_height="115dp"-->
            <!--        android:layout_alignParentStart="true"-->
            <!--        android:layout_alignParentEnd="true"-->
            <!--        android:layout_alignParentBottom="true"-->
            <!--        android:layout_marginStart="130dp"-->
            <!--        android:layout_marginTop="142dp"-->
            <!--        android:layout_marginEnd="130dp"-->
            <!--        android:layout_marginBottom="32dp"-->
            <!--        android:background="@drawable/circle"-->
            <!--        android:gravity="center"-->
            <!--        android:insetTop="0dp"-->
            <!--        android:insetBottom="0dp"-->
            <!--        android:text=" off"-->
            <!--        android:textSize="34sp"-->
            <!--        android:textStyle="bold"-->
            <!--        app:cornerRadius="75dp" />-->
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/na"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@drawable/bcg"
            app:headerLayout="@layout/heder"
            app:itemTextColor="@color/yello"

            app:menu="@menu/menu">

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>


</RelativeLayout>